; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_repos/extr_deprecated.c_svn_repos_load_fs4.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_repos/extr_deprecated.c_svn_repos_load_fs4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_repos_load_fs4(i32* %0, i32* %1, i32 %2, i32 %3, i32 %4, i8* %5, i32 %6, i32 %7, i32 %8, i32 %9, i8* %10, i32 %11, i8* %12, i32* %13) #0 {
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i8*, align 8
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  %25 = alloca i8*, align 8
  %26 = alloca i32, align 4
  %27 = alloca i8*, align 8
  %28 = alloca i32*, align 8
  store i32* %0, i32** %15, align 8
  store i32* %1, i32** %16, align 8
  store i32 %2, i32* %17, align 4
  store i32 %3, i32* %18, align 4
  store i32 %4, i32* %19, align 4
  store i8* %5, i8** %20, align 8
  store i32 %6, i32* %21, align 4
  store i32 %7, i32* %22, align 4
  store i32 %8, i32* %23, align 4
  store i32 %9, i32* %24, align 4
  store i8* %10, i8** %25, align 8
  store i32 %11, i32* %26, align 4
  store i8* %12, i8** %27, align 8
  store i32* %13, i32** %28, align 8
  %29 = load i32*, i32** %15, align 8
  %30 = load i32*, i32** %16, align 8
  %31 = load i32, i32* %17, align 4
  %32 = load i32, i32* %18, align 4
  %33 = load i32, i32* %19, align 4
  %34 = load i8*, i8** %20, align 8
  %35 = load i32, i32* %22, align 4
  %36 = load i32, i32* %22, align 4
  %37 = load i32, i32* %23, align 4
  %38 = load i32, i32* @FALSE, align 4
  %39 = load i32, i32* %24, align 4
  %40 = load i8*, i8** %25, align 8
  %41 = load i32, i32* %26, align 4
  %42 = load i8*, i8** %27, align 8
  %43 = load i32*, i32** %28, align 8
  %44 = call i32* @svn_repos_load_fs5(i32* %29, i32* %30, i32 %31, i32 %32, i32 %33, i8* %34, i32 %35, i32 %36, i32 %37, i32 %38, i32 %39, i8* %40, i32 %41, i8* %42, i32* %43)
  ret i32* %44
}

declare dso_local i32* @svn_repos_load_fs5(i32*, i32*, i32, i32, i32, i8*, i32, i32, i32, i32, i32, i8*, i32, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
